# Algoritmien-vertailu-sovellus

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: explore.py  index.py  maze.py  tremaux.py  visualization.py  wall_follower.py
src/algorithms/: maze.py  tremaux.py  wall_follower.py
src/functionalities/: explore.py  visualization.py
src/services/algorithms/: maze.py  tremaux.py  wall_follower.py
src/services/functions/: explore.py
src/services/visualization/: visualization.py
src/tests/: explore_test.py  maze_test.py  tremaux_test.py  visualization_test.py  wall_follower_test.py
src/ui/: ui.py
