[tool.poetry]
name = "tira_harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Janne Kärki <janne.karki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.2.0"
numpy = "^1.23.2"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.3"
pylint = "^2.14.5"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
